Cascading Change Log

3.3.0 [unreleased]

  Fixed issue where local mode did not honor c.t.SinkMode#KEEP, allowing a c.f.Flow to overwrite existing data.

3.2.0

  Updated c.s.Scheme with optional #sourceRePrepare() method allowing the Scheme instance to be notified on Input
  instances changes. c.t.TupleEntrySchemeIterator currently allows for an Iterator of Input instances, this method
  allows Scheme to be notified as the Iterator is traversed.

  Fixed issue on Apache Hadoop MapReduce where a c.t.Tap used in both accumulated and streamed roles within a single
  step, but having distinct roles in different pipelines, could not be successfully planned and executed.

  Fixed issue where a triangle of split through a c.p.HashJoin into a c.p.Merge on Apache Tez would fail
  during planning.

  Fixed issue where a triangle of split and joins on Apache Hadoop MapReduce would fail during planning.

  Fixed issue where trivial pipe assemblies that reduced to assemblies with multiple edges between two elements would
  fail, e.g. merging a file with itself.

  Added new planner rule for Apache Hadoop MapReduce and Apache Tez that will decorate any Tap instances on the
  accumulated side of a c.p.HashJoin with a platform specific version of the c.t.h.DistCacheTap.

  Added c.u.NullSafeComparator to replace all uses of j.u.Collections#reverseOrder() in tuple sorting/grouping
  code paths.

  Added c.f.h.MultiMapReduceFlow to provide support for a single c.f.Flow instance with many interrelated
  predefined c.a.h.m.JobConf instances that can be executed at once or added incrementally.

3.1.2

  Fixed issue on MapReduce that prevented counters from registering if incremented on a pipe assembly branch feeding the
  accumulated side of a c.p.HashJoin.

3.1.1

  Fixed issue with the MapReduce planner where a c.p.Checkpoint after a c.p.GroupBy merge would fail the planner.

3.1.0
