@@ -2,6 +2,10 @@ Cascading Change Log
 
 3.3.0 [unreleased]
 
+  Updated c.f.Flow for all platforms to fail if any sink is c.t.SinkMode#KEEP, and the resource exists. Prior it has
+  been the responsibility of any given platform (Hadoop MR or Tez) to determine if the resource existed and to fail
+  if true. This firms the c.t.*.PartitionTap contract preventing overwrites of the parent Tap.
+
   Fixed issue where local mode did not honor c.t.SinkMode#KEEP, allowing a c.f.Flow to overwrite existing data.
 
 3.2.0
